--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
        <h2 class="title" id="project">Projects</h2>
 
         <div>
-       <img class="card" src="./images/200.jpeg" alt="Place Holder">
+        <h3>Game Finder</h3>
+        <a href="https://dianegaliano.github.io/project1_videoGameFinder/">
+       <img class="card" src="./images/ProjectOne.png" alt="Place Holder">
+        </a>
         </div>
         <div>
-       <img class="card" src="./images/200.jpeg" alt="Place Holder">
+       <img class="card" src="./images/WorkDay.png" alt="Place Holder">
         </div>
          <div>
        <img class="card" src="./images/200.jpeg" alt="Place Holder">
@@ -84,20 +87,18 @@
         <h2 class="title" id="contact">Contact Information</h2>
 
         <p><span class="name">Email:</span> dianegaliano09@gmail.com</p>
-
-        <p><span class="name">Github:</span> https://github.com/DianeGaliano</p>
        
-   <!-- Github Button     -->
+        
+        <!-- LinkedIn Button -->
         <button class="button is-primary">
             <span class="icon-text">
                 <span class="icon">
-                    <i class="fas fa-home"></i>
+                    <i class="fab fa-linkedin"></i>
                 </span>
-                <a href="#home">Home</a>
+                <a href="https://www.linkedin.com/in/diane-galiano-1064341ba/">LinkedIn</a>
             </span>
-
-            <br>
-        <!-- Home button -->
+        </button>
+        <!-- Github Button -->
     <button class="button is-primary">
         <span class="icon-text">
             <span class="icon">
@@ -106,7 +107,16 @@
             <a href="https://github.com/DianeGaliano">Github</a>
         </span>
     </button>
+    <!-- Home button -->
+    <button class="button is-primary">
+        <span class="icon-text">
+            <span class="icon">
+                <i class="fas fa-home"></i>
+            </span>
+            <a href="#home">Home</a>
+        </span>
     </footer>
 </body>
 
 </html>
+
