added code refactor image and link. fixed css issues

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diane Galiano Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/1b97d5d228.js" crossorigin="anonymous"></script>
     
 </head>
@@ -69,16 +69,22 @@
        <h2 class="title" id="project">Projects</h2>
 
         <div>
-        <h3>Game Finder</h3>
-        <a href="https://dianegaliano.github.io/project1_videoGameFinder/">
-       <img class="card" src="./images/ProjectOne.png" alt="Place Holder">
-        </a>
+            <h3>Game Finder</h3>
+            <a href="https://dianegaliano.github.io/project1_videoGameFinder/">
+            <img class="card" src="./images/ProjectOne.png" alt="Place Holder">
+            </a>
         </div>
         <div>
-       <img class="card" src="./images/WorkDay.png" alt="Place Holder">
+            <h3>Work Day Scheduler</h3>
+            <a href="https://dianegaliano.github.io/HW-Week5-Work-Day-Scheduler/">
+            <img class="card" src="./images/WorkDay.png" alt="Place Holder">
+            </a>
         </div>
          <div>
-       <img class="card" src="./images/200.jpeg" alt="Place Holder">
+             <h3>Code Refactor</h3>
+             <a href="https://dianegaliano.github.io/HW-Code-Refactor/">
+            <img class="card" src="./images/CodeRefactor.png" alt="Place Holder">
+            </a>
         </div>
     </section>
 
