fixed background image issue

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </ul>
     </nav>
 
-    <div class="hero"></div>
-
+    
     <header>
-        <h1>Hello, I'm <span class="name"> Diane Galiano</span> . I'm a web developer.</h1>
+        <div class="hero-image"></div>
+        <div class="hero-text">Hello, I'm <span class="name"> Diane Galiano</span> . I'm a web developer.</div>
     </header>
 
     <main>
