--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="home">
         <ul>
             <li>
-                <a href="#home">Home</a>
+                <a href="./Resume.pdf">Resume</a>
             </li>
             <li>
                 <a href="#me">About Me</a>
